--- a/static.html
+++ b/static.html
@@ -7,7 +7,7 @@
     <title>Netflix: Watch TV Shows Online</title>
 </head>
 <body>
-    <div id ="webpage">
+    <div class ="wrapper">
     <div class = "front">
 
         <div class="logo">
